// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker renders disabled time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper disabled radius"
  >
    <div
      class="zw-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="zw-icon za-time__select-icon zw-icon--time-circle zw-icon--default zw-icon--md"
          theme="default"
          type="time-circle"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
          >
            <use
              href="#time-circle"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="zw-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
      width="auto"
    >
      <div
        class="za-time__select"
      >
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="za-select__bottom"
      >
        <span
          class="clear-btn"
        >
          清除
        </span>
        <span
          class="confirm-btn"
        >
          确认
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker renders disabled time-select correctly 1`] = `
<div
  class="za-time__select"
>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="za-menu za-menu-root za-menu-light za-menu-inline"
        role="menu"
      />
    </span>
  </span>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="za-menu za-menu-root za-menu-light za-menu-inline"
        role="menu"
      />
    </span>
  </span>
  <span
    class="za-select"
  >
    <span
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="za-select__selection"
      style="height:100%;max-height:250px;overflow:auto"
    >
      <ul
        class="za-menu za-menu-root za-menu-light za-menu-inline"
        role="menu"
      />
    </span>
  </span>
</div>
`;

exports[`TimePicker renders isRadius time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper radius"
    style="width:160px"
  >
    <div
      class="zw-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="zw-icon za-time__select-icon zw-icon--time-circle zw-icon--default zw-icon--md"
          theme="default"
          type="time-circle"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
          >
            <use
              href="#time-circle"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="zw-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
      width="auto"
    >
      <div
        class="za-time__select"
      >
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="za-select__bottom"
      >
        <span
          class="clear-btn"
        >
          清除
        </span>
        <span
          class="confirm-btn"
        >
          确认
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker renders normal time-picker correctly 1`] = `
<div>
  <div
    class="za-select za-time__select-wrapper radius"
  >
    <div
      class="zw-dropdown-trigger-box"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="za-select__selection"
      >
        <span
          class="za-select__text za-select__text-placeholder"
        >
          00:00:00
        </span>
        <i
          class="zw-icon za-time__select-icon zw-icon--time-circle zw-icon--default zw-icon--md"
          theme="default"
          type="time-circle"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
          >
            <use
              href="#time-circle"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="zw-dropdown"
      style="min-width:0;width:240px;left:0;top:0;position:absolute;animation-duration:300ms;display:none;overflow:hidden;z-index:2020"
      width="auto"
    >
      <div
        class="za-time__select"
      >
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
        <span
          class="za-select"
        >
          <span
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            class="za-select__selection"
            style="height:100%;max-height:250px;overflow:auto"
          >
            <ul
              class="za-menu za-menu-root za-menu-light za-menu-inline"
              role="menu"
            />
          </span>
        </span>
      </div>
      <div
        class="za-select__bottom"
      >
        <span
          class="clear-btn"
        >
          清除
        </span>
        <span
          class="confirm-btn"
        >
          确认
        </span>
      </div>
    </div>
  </div>
</div>
`;
